Added api key auth to verify endpoint
